fix buy-section mobile

--- a/product-detail-card/style.scss
+++ b/product-detail-card/style.scss
@@ -872,6 +872,7 @@ footer {
         }
 
         .buy-section {
+            display: initial;
 
             .buy-section-card {
                 display: flex;
